--- a/css/style.css
+++ b/css/style.css
@@ -248,10 +248,6 @@ letter-spacing: 0.02em;
     display: flex;
 }
 
-/* .nav-item:not(:last-child){
-    margin-right: 40px;
-} */
-
 
 .nav-item:not(:last-child){
     margin-right: 40px;
@@ -262,10 +258,6 @@ letter-spacing: 0.02em;
     padding-top: 24px;
     padding-bottom: 24px;
 }
-
-/* .contact .nav-item + .nav-item{
-    margin-left: 40px;
-} */
 
 .menu-list{
     display: flex;
@@ -379,7 +371,6 @@ letter-spacing: 0.02em;
 }
 
 .promo{
-    /* padding-top:120px ; */
     padding-bottom:120px ;
 }
 
@@ -417,8 +408,24 @@ letter-spacing: 0.02em;
 
 
 .privelege-list{
-    /* width: calc((100% - 72px) / 4); */
     width: calc((100% - 3 * 24px) / 4);
+}
+
+.customers{
+    padding-top: 120px;
+    padding-bottom: 120px ;
+}
+
+.customers-title{
+    font-size: 36px;
+    line-height: 1.1;
+    text-align: center;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 72px;
+
+    color:#2e2f42  ;
 }
 
   
@@ -431,7 +438,6 @@ letter-spacing: 0.02em;
 
 .bottom-logo{
     display: inline-block;
-    /* margin-bottom: 16px; */
 }
 
 .footer-logo{
