--- a/css/style.css
+++ b/css/style.css
@@ -428,6 +428,33 @@ letter-spacing: 0.02em;
     color:#2e2f42  ;
 }
 
+.customers-list{
+    display: flex;
+    gap:24px;
+}
+
+.customers-icon{
+    height: 88px;
+    width: calc((100% - 120px) / 6);
+}
+
+.icon-item{
+    width: 100%;
+    height: 100%;
+    border: 1px solid #8e8f99;
+    border-radius:4px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color:#8e8f99;
+}
+
+.icon-item:hover,
+.icon-item:focus{
+    border-color: #404bbf;
+}
   
 /* FOOTER */
 
