--- a/css/style.css
+++ b/css/style.css
@@ -451,6 +451,19 @@ letter-spacing: 0.02em;
     color:#8e8f99;
 }
 
+.link-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    border-radius: 4px;
+
+    border: 1px solid #8e8f99;
+    color: #8e8f99;
+}
+
 .icon-item:hover,
 .icon-item:focus{
     border-color: #404bbf;
