--- a/css/style.css
+++ b/css/style.css
@@ -487,6 +487,26 @@ letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
 
+.footer-container{
+    display: flex;
+    align-items: baseline;
+}
+
+.container-logo{
+    gap: 120px;
+}
+
+.socil-media-text{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#FFFFFF;
+    
+    margin-bottom: 16px;
+}
+
+
 /* =====================PAGE#2==================== */
 
 .section-button{
