--- a/css/style.css
+++ b/css/style.css
@@ -349,15 +349,22 @@ letter-spacing: 0.02em;
     display: flex;
     justify-content: center;
     gap: 24px;
-    /* width: 40px;
-    height: 40px; */
 }
 
 .social-media-item{
     display: flex;
-    /* justify-content: center; */
     width: 40px;
     height: 40px;
+}
+
+.social-icon{
+    width: 100%;
+    height: 100%;
+    background-color:  #4d5ae5;
+    border-radius:50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
