--- a/css/style.css
+++ b/css/style.css
@@ -213,9 +213,6 @@ letter-spacing: 0.02em;
     line-height: 1.5;  
     letter-spacing: 0.02em;
     color: #2E2F42;
-
-    
-   
 }
 
 .text-footer{
@@ -352,7 +349,7 @@ letter-spacing: 0.02em;
 }
 
 .social-media-item{
-    display: flex;
+    /* display: flex; */
     width: 40px;
     height: 40px;
 }
@@ -521,6 +518,26 @@ letter-spacing: 0.02em;
 .footer-container{
     display: flex;
     align-items: baseline;
+}
+
+.social-media-footer{
+    display: flex;
+    gap: 16px;
+}
+
+.link-footer{
+    width: 100%;
+    height: 100%;
+    background-color:#4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.link-footer:hover,
+.link-footer:focus{
+    background-color: #31d0aa;;
 }
 
 .container-logo{
