--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,9 @@ letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
 
-
+.footer-logo{
+    
+}
 
 
 /* =====================PAGE#2==================== */
