--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,12 @@ letter-spacing: 0.02em;
 .promo-list-item{
     width: calc((100% - 48px) / 3);
     border: 1px solid #E7E9FC;
+    display: block;
+}
+
+.promo-list-item:hover,
+.promo-list-item:focus{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
 }
 
 .job-title{
@@ -620,6 +626,11 @@ letter-spacing: 0.02em;
     border: 1px solid transparent;
     color: #FFFFFF;
     background-color: #404BBF;
+}
+
+.buttons-filter:hover,
+.buttons-filter:focus{
+    box-shadow:0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 
