--- a/css/style.css
+++ b/css/style.css
@@ -333,11 +333,15 @@ letter-spacing: 0.02em;
 .promo-list-item{
     width: calc((100% - 48px) / 3);
     border: 1px solid #E7E9FC;
+    
+}
+
+.link-hover-focus{
     display: block;
 }
 
-.promo-list-item:hover,
-.promo-list-item:focus{
+.link-hover-focus:hover,
+.link-hover-focus:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
 }
 
