--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,10 @@ letter-spacing: 0.02em;
     line-height: 24px;
 }
 
+.fill-footer{
+    fill: var(--logo-footer-color);
+}
+
 
 /* =====================PAGE#1==================== */
 .page-header-container{
@@ -351,8 +355,9 @@ letter-spacing: 0.02em;
 } */
 
 .job-title{
-    padding-top: 32px;
-    padding-bottom: 32px; 
+    /* padding-top: 32px;
+    padding-bottom: 32px;  */
+    padding: 32px 0;
     padding-left: 16px;
     padding-right: 16px;
 }
