--- a/css/style.css
+++ b/css/style.css
@@ -349,10 +349,10 @@ letter-spacing: 0.02em;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
 }
 
-/* .team-container{
+.team-container{
     padding-top: 32px;
     padding-bottom: 32px;
-} */
+}
 
 .job-title{
     /* padding-top: 32px;
@@ -391,7 +391,7 @@ letter-spacing: 0.02em;
 }
 
 .fill{
-    fill:var(--logo-footer-color);
+    fill:#4fd4fd;
 }
 
 
