--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,8 @@ letter-spacing: 0.02em;
     padding: 32px 0;
     padding-left: 16px;
     padding-right: 16px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .social-media{
@@ -483,6 +485,10 @@ letter-spacing: 0.02em;
 .customers-icon{
     height: 88px;
     width: calc((100% - 120px) / 6);
+}
+
+.icon-fill{
+    fill: #f4f4fd;
 }
 
 .icon-item{
