--- a/css/style.css
+++ b/css/style.css
@@ -353,8 +353,7 @@ letter-spacing: 0.02em;
 
 
 .job-title{
-    padding-top: 32px;
-    padding-bottom: 32px; 
+    padding: 32px 0 32px;
     padding-left: 16px;
     padding-right: 16px;
 
