--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ letter-spacing: 0.02em;
 
 
 .job-title{
-    padding: 32px 0 32px;
+    /* padding:32px 0;  */
     padding-left: 16px;
     padding-right: 16px;
 
@@ -366,7 +366,6 @@ letter-spacing: 0.02em;
 }
 
 .social-media-item{
-    /* display: flex; */
     width: 40px;
     height: 40px;
     margin-top: 8px;
