--- a/css/style.css
+++ b/css/style.css
@@ -353,10 +353,9 @@ letter-spacing: 0.02em;
 
 
 .job-title{
-    /* padding:32px 0;  */
-    padding-left: 16px;
-    padding-right: 16px;
-
+    padding:32px 0; 
+    /* padding-left: 16px;
+    padding-right: 16px; */
 }
 
 .social-media{
